Revert "AO3-7160 Fix clipped autocomplete dropdown when assigning a pinch hitter (#5699)"
This reverts commit 9ce0b996502f3351d54dbd4bef090f3701ede12d.

--- a/public/stylesheets/site/2.0/10-types-groups.css
+++ b/public/stylesheets/site/2.0/10-types-groups.css
@@ -158,12 +158,6 @@ dl.index dd .userstuff p {
   display: block;
 }
 
-/* contexts */
-
-form dl.index {
-  position: initial;
-}
-
 /* TYPES */
 
 a.rss span {
